--- a/src/components/style/components.css
+++ b/src/components/style/components.css
@@ -90,6 +90,7 @@ h2 {
     color: rgb(255, 255, 255);
     font-style: bold;
     text-align: center;
+    font-size:19px;
 }
 
 
@@ -101,7 +102,7 @@ h2 {
     border: 0px;
     font-style: bold;
     color: aliceblue;
-    font-size:20px;
+    font-size:18px;
     background-color:rgba(255, 0, 0, 0.596);
     border-radius: 5px;
     box-shadow: 
@@ -140,7 +141,7 @@ h2 {
     width: 100%;
     background-size: cover;
     background-position: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 1)), url(/src/assets/images/fondo2.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 1)), url(/src/assets/images/fondo2.png);
 }
 
 
@@ -163,7 +164,7 @@ h2 {
 
 .resultsSquare {
     position: absolute;
-    width:800px;
+    width:850px;
     height: 667px;
     left: 1050px;
     top: 130px;
@@ -183,45 +184,47 @@ h2 {
     
 }
 
-input {
-    border-radius: 5px;
-    font-family:'Trebuchet MS', sans-serif;
-    font-size: 21px;
-}
+
 
 .resultsTable {
     color: rgb(248, 248, 248);
     text-align: center;
-    font-size: large;
-    width: 800px;
-    height: 600px;
-    border-collapse: collapse;
     scroll-margin: 0px;
-
+    width:850px;
+    height: auto;
+    
 }
 .genreTable {
     background-color: rgba(99, 16, 62, 0.486);
     color: aliceblue;
-    width: 200px;
+    width: 220px;
     height: 350px;
 }
 
 .selectGenre {
     width: 250px;
-    height: 50px;
+    height: 45px;
     border-radius: 5px;
     font-family:'Trebuchet MS', sans-serif;
-    font-size: 21px;
+    font-size: 17px;
+    text-align: center;
 }
 
 tbody tr {
-    background-color: rgba(12, 2, 2, 0.13);
+    background-color: rgba(4, 26, 48, 0.281);
     color: rgb(255, 255, 255);
     height: 30px;
+    width: auto;
     text-overflow: ellipsis;
+    justify-content: center;
+    align-items: center;
     
 
 
+}
+
+td {
+    width: auto;
 }
 
 
@@ -231,8 +234,10 @@ tbody tr {
     top: 0;
     overflow-x: scroll;
     background-color: #e73d3d;
-    font-size: 21px;
+    font-size: 18px;
     border-radius: 10px;
+    height: 30px;
+    margin-left: 10px;
 }
 
 
@@ -286,16 +291,29 @@ tbody tr {
     color: aliceblue;
     font-family:'Trebuchet MS', sans-serif;
     font-style: bold;
-    font-size: 20px;
+    font-size: 18px;
     
   }
 
 .inputModal {
     background-color:rgba(112, 107, 107, 0.521);
     font-family:'Trebuchet MS', sans-serif;
-    font-size: 21px;
+    font-size: 18px;
     height: 30px;
     border: 0;
     color:aliceblue;
     border-radius: 2px;
+}
+
+.manageFormInput {
+    border-radius: 5px;
+    font-family:'Trebuchet MS', sans-serif;
+    font-size: 17px;
+}
+
+.options {
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
