--- a/src/components/main_screen/main_screen.css
+++ b/src/components/main_screen/main_screen.css
@@ -1,64 +1,69 @@
 .main_container {
-    width: 100%;
-    height: 100vh;
     display: grid;
     grid-template-columns: 50% 50%;
+    height: 100vh;
     text-align: center;
+    width: 100%;
 
 }
 
 ._title_container {
     align-items: center;
-    margin-top: 5%;
     margin-left: 15%;
+    margin-top: 5%;
 }
 
 h1 {
-    font-family: "Roboto", sans-serif;
-    font-weight: 800;
-    font-size: 130px;
     color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 130px;
+    font-weight: 800;
     text-align: start;
     text-shadow: 
-        1px 0px 1px #444343,
-        3px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        5px 0px 0px #444343,
-        7px 0px 0px rgba(0, 0, 0, 0.5);
+        1px 0px 0px #575656,
+        2px 0px 0px #575656,
+        3px 0px 0px #575656,
+        4px 0px 0px #575656,
+        5px 0px 0px #575656,
+        6px 0px 0px #575656,
+        5px 0px 0px #575656,
+        5px 0px 0px #575656,
+        5px 0px 0px #575656,
+        5px 0px 0px #575656,
+        10px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
 ._options_container {
-    position: relative;
+    align-items: center;
     background-color: #252525;
-    width: 400px;
-    height: 400px;
-    padding: 10px;
-    margin-top: 17%;
-    margin-left: 20%;
     border-radius: 3px;
     display: flex;
     flex-direction: column;
+    height: 400px;
     justify-content: center;
+    margin-left: 30%;
+    margin-top: 17%;
+    padding: 10px;
+    position: relative;
+    text-align: center;
+    width: 400px;
 
 }
 
 .button_search_movie, .button_add_movie {
-    font-family: "Roboto", sans-serif;
-    margin-top: 5%;
-    position: relative;
-    width: 300px;
-    height: 70px;
-    border: 0px;
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    font-size: 20px;
+    align-items: center;
     background-color:rgb(71, 66, 66);
     border-radius: 3px;
+    color: rgb(255, 255, 255);
     cursor:pointer;
+    display: flex;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    height: 70px;
+    justify-content: center;
+    margin-top: 5%;
+    position: relative;
+    text-decoration: none;
+    width: 300px;
 }
