--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,35 +1,35 @@
 nav {
-    width: 100%;
-    height: 100px;
     background-color: transparent;
+    height: 100px;
+    width: 100%;
 }
 
 .button_home {
     background-color: transparent;
-    color: white;
-    padding-top: 50px;
-    position: relative;
-
-    left: 7%;
     border: 0;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-size: 20px;
+    color: white;
     cursor: pointer;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    left: 8%;
+    position: relative;
+    text-decoration: none;
+    top: 50px;
 }
 
 img {
-    position: relative;
     padding: 10px;
+    position: relative;
 }
 
 .logo {
-    position: relative;
     background-image: url(/public/images/logo.png);
     background-position: center;
-    width:300px;
     height: 70px;
-    padding: 10px;
     left: 2%;
+    padding: 10px;
+    position: relative;
+    width:300px;
     
 }
