--- a/src/components/manage_movies_screen/manage_movies_screen.css
+++ b/src/components/manage_movies_screen/manage_movies_screen.css
@@ -2,21 +2,10 @@
     height: 100vh;
     max-width: 100%;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 60% 40%;
     font-family: "Roboto", sans-serif;
 }
 
-._movies_table_container {
-    border-radius: 2px;
-    border: 2px;
-    display: flex;
-    height: 667px;
-    justify-content: center;
-    margin-left: 15%;
-    margin-top: 10%;
-    width:800px;
-    
-}
 
 ._manage_title_container {
     margin-left: 20%;
@@ -61,133 +50,101 @@
     text-align: center;
 }
 
-._movies_table {
-    background-color: #221f1f;
-    color: rgb(248, 248, 248);
-    text-align: center;
-    font-size: large;
-    width: 800px;
-    height: 600px;
-    border-collapse: collapse;
-    scroll-margin: 0px;
-    padding: 20px;
+._table_tr{
+    position:sticky;
+    top: 0;
+    font-size: 15px;
+    border-radius: 10px;
+    color: #a7a4a4;
+}
 
+._movies_table_container {
+    margin-top: 10%;
+    margin-left: 10%;
+    width: 1000px;
+    height: 70%;
+    overflow-x: hidden;
+    background-color: #221f1f;
+}
+
+._movies_table {
+    color: rgb(255, 255, 255);
+    position: relative;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    width: 100%;
+    border-collapse: collapse;
+    max-height: 100%;
+    text-align: center;    
 }
 
 ._movies_table th {
-    padding: 20px;
-    margin-top: 10px;
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 15px;
-}
-
-._movies_table tr {
-    border-bottom: 1px solid #6d6b6b;
-}
-
-._table_header {
-    position:sticky;
-    top: 0;
-    overflow-x: scroll;
-    font-size: 21px;
-    border-radius: 10px;
-}
-.resultButtons {
-    background-color:rgba(5, 5, 29, 0.596);
-    border-color: #0b153f34;
-    color: aliceblue;
-    border-radius: 5px;
-    cursor:pointer; 
-}
-
-.deleteButtons {
-    background-color:rgb(158, 0, 0);
-    border-color: #0b153f34;
-    color: aliceblue;
-    border-radius: 5px;
-    cursor:pointer; 
-}
-
-.modifyButtons {
-    background-color:rgb(119, 128, 0);
-    border-color: #0b153f34;
-    color: aliceblue;
-    border-radius: 5px;
-    cursor:pointer;
-}
-
-.genreTable {
-    background-color: rgba(99, 16, 62, 0.486);
-    color: aliceblue;
-    width: 200px;
-    height: 350px;
-}
-
-.selectGenre {
-    width: 250px;
     height: 50px;
-    border-radius: 5px;
-    font-family:'Trebuchet MS', sans-serif;
-    font-size: 21px;
+    background-color: #221f1f;
+    
+}
+._movies_table tr {
+    border-bottom: 1px solid rgba(128, 128, 128, 0.418);
+    height: 50px;
+    &:hover {
+        color: #6d6b6b;
+    }
 }
 
-tbody tr {
-    background-color: rgba(12, 2, 2, 0.13);
-    color: rgb(255, 255, 255);
+._movies_table td {
+    padding: 10px;
     height: 30px;
-    text-overflow: ellipsis;
-    
+}
 
+._options_buttons_container {
+    font-size: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
 
 }
 
-
-
-
-  /* width */
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-    
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: rgb(1, 3, 12);
-    border-radius: 1px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #ee9292;
-    border-radius: 2px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #8d0c0c;
-  }
-  .resultModal {
-    width: 1200px;
-    height: 700px;
-    background-color: black;
+.movie_modal {
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    width: 600px;
+    height: 600px;
+    background-color: #221f1f;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 5px;
+    color: white;
 
-  }
+}
 
+._modal_title_continer {
+    text-align: center;
+}
 
+._input_group_modal {
+    padding-top: 20px;
+}
 
-.inputModal {
-    background-color:rgba(112, 107, 107, 0.521);
-    font-family:'Trebuchet MS', sans-serif;
-    font-size: 21px;
-    height: 30px;
-    border: 0;
-    color:aliceblue;
-    border-radius: 2px;
+._input_group_modal input {
+    position: relative;
+    background-color: transparent;
+    border-radius: 3px;
+    border: 1px solid #6d6b6b;
+    color: aliceblue;
+    font-size: 15px;
+    height: 42px;
+    padding: 5px;
+}
+
+._input_group_modal label {
+    display: block;
+    margin-bottom: 0.5rem;
+    color: white;
+}
+
+._input_group_modal input[type="date"], input[type="number"] {
+    width: 220px;
 }
